rancher/rancher_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress-stetten
  namespace: cattle-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - rancher.lab.qstetten.de
      secretName: rancher-qstetten-cert
  rules:
    - host: "rancher.lab.qstetten.de"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: rancher
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress-luis
  namespace: cattle-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - rancher.lab.lcarilla.de
      secretName: rancher-lcarilla-cert
  rules:
    - host: "rancher.lab.lcarilla.de"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: rancher
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress-stetten
  namespace: cattle-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - rancher.lab.lsgserver.me
      secretName: rancher-lsgserver-cert
  rules:
    - host: "rancher.lab.lsgserver.me"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: rancher
                port:
                  number: 80
